[package]
name = "tacacs-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:futures", "byteorder/std"]
docsrs = []

[dependencies]
bitflags = { version = "2.4.2" }
byteorder = { version = "1.5.0", default-features = false }
futures = { version = "0.3.21", optional = true }
rand = { version = "0.8.5", default-features = false }
tinyvec = { version = "1.6.1", features = ["rustc_1_57"] }
